# podman-sequoia

./: .gitignore  .gitleaks.toml  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
go/: GNUmakefile  go.mod
go/sequoia/: goopenpgp.c  goopenpgp.h  goopenpgpfuncs.h  gosequoiafuncs.h  sequoia.go  sequoia.h  sequoia_test.go
go/sequoia/fixtures/: D4D7F65AC17B39F15DB0818E0D90D1FA7B470BDD.cert  D4D7F65AC17B39F15DB0818E0D90D1FA7B470BDD.key  D4D7F65AC17B39F15DB0818E0D90D1FA7B470BDD.sig
go/sequoia/fixtures/data/data/keystore/softkeys/: D4D7F65AC17B39F15DB0818E0D90D1FA7B470BDD.pgp
go/sequoia/fixtures/data/data/pgp.cert.d/: _sequoia_ca_generated_on_fedora0.pgp  _sequoia_cert_store_index_v1_on_fedora0.sqlite  _sequoia_signature_verification_cache_v1_on_fedora0.sqlite  trust-root
go/sequoia/fixtures/data/data/revocation-certificates/: D4D7F65AC17B39F15DB0818E0D90D1FA7B470BDD-revocation.pgp
go/sequoia/include/podman/: openpgp.h
rust/: Cargo.toml  build.rs  podman-sequoia.pc.in
rust/src/: error.rs  signature.rs
src/: error.rs  signature.rs
src/data/: double-signed.signature
